fix block overflow

--- a/app/assets/stylesheets/listings_index.scss
+++ b/app/assets/stylesheets/listings_index.scss
@@ -127,6 +127,14 @@
   position: absolute;
   bottom: -50px;
   left: 10px;
+  width: 250px;
+  overflow: scroll;
+}
+
+#listing-address {
+  width: 250px;
+  overflow: scroll;
+  height: 20px;
 }
 
 .listing-toe-nail {
